# claude-dotfiles

./: .claudeignore  .dockerignore  .gitignore  .lycheecache  .rumdl.toml  .shellcheckrc  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  cliff.toml  install.sh  justfile  lychee.toml  pyproject.toml  uninstall.sh
.claude/: ci-contract.md
.claude-plugin/: marketplace.json  plugin.json
commands/: commit.md  fbr.md  feedback-add.md  feedback-clean.md  feedback-review.md  helm-render.md  just-help.md  plan.md  pln.md  ppr.md  prepare-pr.md  review-code.md  review-plan.md  rvc.md  rvp.md
docs/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  claude-hook-requirements.md  docker.md  git-workflow.md  helm-guide.md  kustomize-style-guide.md  notification-hooks.md  python-style-guide.md  release-automation-testing.md  terraform-style-guide.md
examples/: .gdf-hooks-disabled  justfile.example  settings.json  workflows.md
filters/: ingestion-filters.json
hooks/: pre-commit  prepare-commit-msg
justfiles/: _base.just  ci.just  context.just  plans.just
prompts/: commit.md  plan.md  prepare-pr.md  review-code.md  review-plan.md
reference/: marketplace.md  ref-plugin.md  settings-ref.md  slash-commands.md
scripts/: claude-hook-wrapper.sh  feedback_parser.py  get-notification-context.sh  get-repo-url.py  git-linear-history.sh  helm-chart-render.sh  ingest-repo.py  install-notification-hooks.sh  list-ingested-repos.py  planworktree.py  remove-ingested-repo.py  send-notification.sh  validate-release-automation.sh
(+50 files in other folders)
